deployments/k3s/traefik-redirect-https-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: reaperc2-ns
spec:
  redirectScheme:
    scheme: https
    permanent: true
